--- a/css/style.css
+++ b/css/style.css
@@ -717,6 +717,10 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  z-index: 10;
+}
+.login__hidden {
+  display: none;
 }
 .login__signBox {
   position: relative;
@@ -798,6 +802,16 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+}
+.signup__invalid {
+  border: 2px solid red;
+}
+.signup__valid {
+  border: 2px solid greenyellow;
+}
+.signup__open {
+  opacity: 1;
 }
 .signup__signBox {
   position: relative;
@@ -828,7 +842,6 @@ body {
 .signup__formBox input {
   background: #f5f5f5;
   width: 60%;
-  border: none;
   outline: none;
   box-shadow: none;
   font-size: 1.3rem;
