--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,6 +19,7 @@ body {
   font-family: $font-primary;
   font-weight: 400;
   line-height: 1.8;
+  overflow-x: hidden;
 }
 .indexContainer {
   display: grid;
