--- a/sass/_hotEvent.scss
+++ b/sass/_hotEvent.scss
@@ -4,21 +4,34 @@
   margin-top: 30vh;
   display: flex;
   flex-direction: row;
-  &__date,
+  &__date {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: peachpuff;
+    border: 0.3rem solid black;
+    border-radius: 10px;
+  }
   &__event {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background: linear-gradient(
+      to right,
+      transparent,
+      rgb(240, 250, 49) 15%,
+      rgb(240, 250, 49) 85%,
+      transparent
+    );
   }
 }
 .calendar {
-  width: min(50%, max-content);
+  width: 100%;
   padding: 30px 20px;
-  border-radius: 10px;
-  border-right: 0.3rem solid black;
   &__header {
     display: flex;
     justify-content: space-between;
@@ -83,37 +96,49 @@
     justify-content: center;
     align-items: center;
     border-radius: 0.6rem;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 400;
     color: black;
     transition: all 0.3s;
     user-select: none;
     &:hover {
       transform: scale(1.1);
-      background-color: $color-secondary;
+      background-color: greenyellow;
     }
     &--next,
     &--prev {
       color: #d3d1d1;
     }
     &--today {
-      background-color: $color-secondary;
-      transform: scale(1.2);
+      background-color: greenyellow;
+      transform: scale(1);
       font-size: 3rem;
     }
   }
 }
 .event {
-  &__title {
-    flex: 0 0 20%;
-    font-size: 5rem;
-    color: black;
-    border-bottom: 0.3rem solid black;
+  color: black;
+  text-align: start;
+  &__day {
+    font-size: 10rem;
   }
-  &__schedule {
-    flex: 1;
+  &__seperator {
+    width: 50%;
+    height: 0.5rem;
+    background-color: black;
+    margin-bottom: 1rem;
+  }
+  &__title {
+    font-size: 5rem;
+  }
+  &__time {
     font-size: 2rem;
-    color: black;
+  }
+  &__location {
+    font-size: 2rem;
+  }
+  &__others {
+    font-size: 1.5rem;
   }
 }
 
@@ -127,11 +152,11 @@
   }
 
   .calendar {
-    width: 100%; /* 讓 calendar 佔滿容器寬度 */
-    margin-bottom: 20px; /* 在 event 上方添加一些間距 */
+    width: 100%;
+    margin-bottom: 20px;
   }
 
   .event {
-    width: 100%; /* 讓 event 佔滿容器寬度 */
+    width: 100%;
   }
 }
