--- a/scss/_shop.scss
+++ b/scss/_shop.scss
@@ -29,7 +29,7 @@
     padding: 1rem;
     img {
       max-width: 100%;
-      height: auto;
+      height: 20rem;
       object-fit: cover;
     }
   }
