--- a/scss/_hotEvent.scss
+++ b/scss/_hotEvent.scss
@@ -123,6 +123,7 @@
     font-size: 10rem;
   }
   &__seperator {
+    display: block;
     width: 50%;
     height: 0.5rem;
     background-color: black;
