--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,6 @@
 @import "heroNoscroll";
 @import "login";
 @import "shop";
-@import "productDetails";
+@import "productProduct";
+@import "map";
+@import "shopCart";
