--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,18 @@ body {
   gap: 2rem;
 }
 
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
 *,
 *::before,
 *::after {
@@ -81,6 +93,18 @@ body {
 }
 
 .shopProductContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
   display: grid;
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
@@ -252,6 +276,18 @@ body {
   gap: 2rem;
 }
 
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
 .hotEvent {
   margin-top: 30vh;
   display: flex;
@@ -370,6 +406,7 @@ body {
   font-size: 10rem;
 }
 .event__seperator {
+  display: block;
   width: 50%;
   height: 0.5rem;
   background-color: black;
@@ -441,6 +478,18 @@ body {
 }
 
 .shopProductContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
   display: grid;
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
@@ -555,6 +604,18 @@ body {
 }
 
 .shopProductContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
   display: grid;
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
@@ -823,6 +884,18 @@ body {
   gap: 2rem;
 }
 
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
 .N-hero {
   top: 0;
   left: 0;
@@ -865,6 +938,20 @@ body {
 }
 .N-nav__link a i {
   margin: 0 0.5rem;
+}
+.N-nav__openCart {
+  position: absolute;
+  font-size: 2rem;
+  width: 5%;
+  height: 86%;
+  right: 90px;
+  top: -7px;
+  color: black;
+  background-color: #fff;
+  border-radius: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -949,6 +1036,22 @@ body {
   gap: 2rem;
 }
 
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.message {
+  font-size: 3rem;
+}
+
 .login {
   position: absolute;
   top: 7rem;
@@ -994,7 +1097,7 @@ body {
   border: none;
   outline: none;
   box-shadow: none;
-  font-size: 1.3rem;
+  font-size: 4rem;
   margin: 1rem 0;
   letter-spacing: 0.1rem;
   transition: 0.5s;
@@ -1011,8 +1114,9 @@ body {
 .login__signUp {
   position: relative;
   margin-top: 2rem;
-  font-size: 1.2rem;
+  font-size: 3rem;
   color: #555;
+  cursor: pointer;
 }
 .login__signUp a {
   color: #577eff;
@@ -1048,7 +1152,7 @@ body {
   border: 2px solid red;
 }
 .signup__valid {
-  border: 2px solid greenyellow;
+  border: 2px solid green;
 }
 .signup__open {
   opacity: 1;
@@ -1084,7 +1188,7 @@ body {
   width: 60%;
   outline: none;
   box-shadow: none;
-  font-size: 1.3rem;
+  font-size: 4rem;
   margin: 1rem 0;
   letter-spacing: 0.1rem;
   transition: 0.5s;
@@ -1097,6 +1201,10 @@ body {
   cursor: pointer;
   transition: 0.5s;
   display: block;
+}
+.signup__formBox input[type=submit]:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 .signup__signUp {
   position: relative;
@@ -1111,8 +1219,9 @@ body {
 .signup__login {
   position: relative;
   margin-top: 2rem;
-  font-size: 1.2rem;
+  font-size: 3rem;
   color: #555;
+  cursor: pointer;
 }
 .signup__login a {
   color: #577eff;
@@ -1162,6 +1271,18 @@ body {
 }
 
 .shopProductContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
   display: grid;
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
@@ -1246,6 +1367,21 @@ body {
   gap: 2rem;
 }
 
+.mapContainer {
+  display: grid;
+  grid-template-rows: 4vw 1fr 1fr;
+  gap: 2rem;
+}
+
+.shopCartContaioner {
+  display: grid;
+  grid-template-rows: 4vw 1fr;
+  gap: 2rem;
+}
+
+.productDetails {
+  margin: 0 3rem;
+}
 .productDetails__title {
   font-size: 10rem;
   text-align: center;
@@ -1256,10 +1392,49 @@ body {
   gap: 5rem;
   text-align: left;
 }
+.productDetails__content {
+  display: flex;
+  flex-wrap: wrap;
+}
 .productDetails__name {
+  width: 100%;
   font-size: 5rem;
 }
 .productDetails__price {
+  width: 50%;
+  font-size: 5rem;
+}
+.productDetails__buttons {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+.productDetails__pay {
+  width: 40%;
+  font-size: 2.5rem;
+  border-radius: 5rem;
+  border: 0;
+  cursor: pointer;
+}
+.productDetails__pay:hover {
+  background-color: antiquewhite;
+  scale: 1.2;
+}
+.productDetails__pay i {
+  font-size: 5rem;
+}
+.productDetails__cart {
+  width: 40%;
+  font-size: 2.5rem;
+  border-radius: 5rem;
+  cursor: pointer;
+  border: 0;
+}
+.productDetails__cart:hover {
+  background-color: antiquewhite;
+  scale: 1.2;
+}
+.productDetails__cart i {
   font-size: 5rem;
 }
 .productDetails__description {
@@ -1269,6 +1444,79 @@ body {
   width: 100%;
   object-fit: cover;
   border-radius: 10rem;
+}
+
+.search {
+  width: 80%;
+  margin: 0 auto;
+}
+.search__title {
+  font-size: 5rem;
+  text-align: center;
+}
+.search__description {
+  font-size: 3rem;
+  text-align: left;
+}
+.search__label {
+  font-size: 3rem;
+}
+.search__input {
+  font-size: 3rem;
+  background-color: antiquewhite;
+  border: 0;
+  border-radius: 2rem;
+}
+
+.shopCart {
+  width: 80%;
+  margin: 5rem auto;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+.shopCart__list {
+  width: 60%;
+  background-color: aqua;
+  font-size: 5rem;
+  border-right: 0.5rem solid black;
+}
+.shopCart__pay {
+  width: 40%;
+  background-color: antiquewhite;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.shopCart__pay hr {
+  height: 0.5rem;
+  background-color: black;
+}
+.shopCart__pay--left {
+  width: 50%;
+  font-size: 5rem;
+}
+.shopCart__pay--right {
+  width: 50%;
+  font-size: 5rem;
+}
+.shopCart__seperator {
+  width: 100%;
+  height: 0.5rem;
+  background-color: black;
+  margin-bottom: 1rem;
+}
+.shopCart__button {
+  width: 100%;
+  text-align: right;
+}
+.shopCart__button button {
+  background-color: aquamarine;
+  border-radius: 2rem;
+  width: 25%;
+  font-size: 5rem;
+  border: 0;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
