--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -100,8 +100,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -278,8 +278,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -485,8 +485,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -611,8 +611,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -886,8 +886,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -1038,8 +1038,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -1278,8 +1278,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -1369,8 +1369,8 @@ body {
 
 .mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
 
 .shopCartContaioner {
@@ -1449,14 +1449,21 @@ body {
 .search {
   width: 80%;
   margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 .search__title {
-  font-size: 5rem;
+  font-size: 4rem;
   text-align: center;
+  width: 100%;
 }
 .search__description {
-  font-size: 3rem;
+  width: 100%;
+  font-size: 2.5rem;
   text-align: left;
+}
+.search__left {
+  width: 40%;
 }
 .search__label {
   font-size: 3rem;
@@ -1466,6 +1473,36 @@ body {
   background-color: antiquewhite;
   border: 0;
   border-radius: 2rem;
+  height: 5rem;
+}
+.search__button {
+  border: 0;
+  font-size: 3rem;
+  width: 16rem;
+  background-color: aquamarine;
+  color: black;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+.search__output {
+  width: 60%;
+}
+
+.googleMap {
+  width: 90%;
+  height: 40rem;
+  background-color: aqua;
+  margin: 0 auto;
+}
+.googleMap__info {
+  font-size: 3rem;
+  display: flex;
+  gap: 3rem;
+  margin: 0 auto;
+  z-index: 5;
+}
+.googleMap__info--fail {
+  color: red;
 }
 
 .shopCart {
