--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -40,12 +40,12 @@ body {
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
 }
-.mapContainer{
+.mapContainer {
   display: grid;
-  grid-template-rows: 4vw 1fr 1fr;
-  gap: 2rem;
+  grid-template-rows: 4vw 15vw 1fr;
+  gap: 1.5rem;
 }
-.shopCartContaioner{
+.shopCartContaioner {
   display: grid;
   grid-template-rows: 4vw 1fr;
   gap: 2rem;
