--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -1,21 +1,58 @@
 .search {
-    width: 80%;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  &__title {
+    font-size: 4rem;
+    text-align: center;
+    width: 100%;
+  }
+  &__description {
+    width: 100%;
+    font-size: 2.5rem;
+    text-align: left;
+  }
+  &__left {
+    width: 40%;
+  }
+  &__label {
+    font-size: 3rem;
+  }
+  &__input {
+    font-size: 3rem;
+    background-color: antiquewhite;
+    border: 0;
+    border-radius: 2rem;
+    height: 5rem;
+  }
+  &__button {
+    border: 0;
+    font-size: 3rem;
+    width: 16rem;
+    background-color: aquamarine;
+    color: black;
+    border-radius: 2rem;
+    cursor: pointer;
+  }
+  &__output {
+    width: 60%;
+  }
+}
+
+.googleMap {
+  width: 90%;
+  height: 40rem;
+  background-color: aqua;
+  margin: 0 auto;
+  &__info {
+    font-size: 3rem;
+    display: flex;
+    gap: 3rem;
     margin: 0 auto;
-    &__title {
-        font-size: 5rem;
-        text-align: center;
+    z-index: 5;
+    &--fail {
+      color: red;
     }
-    &__description{
-        font-size: 3rem;
-        text-align: left;
-    }
-    &__label{
-        font-size: 3rem;
-    }
-    &__input{
-        font-size: 3rem;
-        background-color: antiquewhite;
-        border: 0;
-        border-radius: 2rem;
-    }
+  }
 }
