--- a/scss/_heroNoscroll.scss
+++ b/scss/_heroNoscroll.scss
@@ -1,8 +1,7 @@
 @use "base";
 .N-hero {
-  top: 0;
-  left: 0;
   width: 100%;
+  height: 100%;
   padding: 1.5rem 3rem;
   background-color: black;
   display: flex;
@@ -10,14 +9,20 @@
   align-items: center;
 }
 .N-logo {
-  font-size: 3rem;
+  font-size: 4rem;
   color: #fff;
+  &:hover {
+    scale: 1.2;
+  }
 }
 .N-hamburger {
   display: none;
 }
 .N-nav {
   display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   &__links {
     position: relative;
     display: flex;
@@ -25,14 +30,11 @@
   &__link {
     list-style: none;
     a {
-      color: #fff;
+      color:white;
       display: inline;
       padding: 1rem 1.5rem;
       font-size: 2rem;
       text-decoration: none;
-      & :hover {
-        color: $color-tertiary;
-      }
       i {
         margin: 0 0.5rem;
       }
@@ -41,10 +43,10 @@
   &__openCart{
     position: absolute;
     font-size: 2rem;
-    width: 5%;
-    height: 86%;
-    right:90px;
-    top:-7px;
+    width: 2rem;
+    height: 2.4rem;
+    right:95px;
+    top:-1px;
     color: black;
     background-color: #fff;
     border-radius: 2rem;
