--- a/scss/_shopCart.scss
+++ b/scss/_shopCart.scss
@@ -1,20 +1,26 @@
 .shopCart {
     width: 80%;
-    margin: 5rem auto ;
+    margin: 5rem auto;
     display: flex;
     justify-content: center;
     gap: 3rem;
+    padding: 2rem;
+    border: 0.3rem solid black;
+
+    &__item {
+        margin: 0 1.5rem;
+        display: flex;
+        justify-content: space-between;
+    }
 
     &__list {
         width: 60%;
-        background-color: aqua;
         font-size: 5rem;
         border-right: 0.5rem solid black;
     }
 
     &__pay {
         width: 40%;
-        background-color: antiquewhite;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -22,11 +28,7 @@
             height: 0.5rem;
             background-color: black;
         }
-        &--left {
-            width: 50%;
-            font-size: 5rem;
-        }
-
+        &--left,
         &--right {
             width: 50%;
             font-size: 5rem;
@@ -42,15 +44,17 @@
 
     &__button {
         width: 100%;
-        text-align: right;
-
         button {
             background-color: aquamarine;
             border-radius: 2rem;
-            width: 25%;
+            width: 100%;
             font-size: 5rem;
             border: 0;
+            margin-top: auto; 
             cursor: pointer;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 }
