--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,6 @@
 @import "heroNoscroll";
 @import "login";
 @import "shop";
-@import "productProduct";
+@import "productDetail";
 @import "map";
 @import "shopCart";
