--- a/css/style.css
+++ b/css/style.css
@@ -896,6 +896,10 @@ body {
   gap: 2rem;
 }
 
+.openCart--close {
+  visibility: hidden;
+}
+
 .N-hero {
   width: 100%;
   height: 100%;
@@ -1054,6 +1058,14 @@ body {
   font-size: 3rem;
 }
 
+.--invalid {
+  border: 2px solid red;
+}
+
+.--valid {
+  border: 2px solid green;
+}
+
 .login {
   position: absolute;
   top: 7rem;
@@ -1107,11 +1119,15 @@ body {
 .login__formBox input[type=submit] {
   background-color: #677eff;
   border-radius: 0.5rem;
-  max-width: 10rem;
+  max-width: 50rem;
   color: #fff;
   cursor: pointer;
   transition: 0.5s;
   display: block;
+}
+.login__formBox input[type=submit]:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 .login__signUp {
   position: relative;
@@ -1149,12 +1165,6 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 0;
-}
-.signup__invalid {
-  border: 2px solid red;
-}
-.signup__valid {
-  border: 2px solid green;
 }
 .signup__open {
   opacity: 1;
