--- a/scss/_heroNoscroll.scss
+++ b/scss/_heroNoscroll.scss
@@ -1,4 +1,7 @@
 @use "base";
+.openCart--close {
+  visibility: hidden;
+}
 .N-hero {
   width: 100%;
   height: 100%;
@@ -30,7 +33,7 @@
   &__link {
     list-style: none;
     a {
-      color:white;
+      color: white;
       display: inline;
       padding: 1rem 1.5rem;
       font-size: 2rem;
@@ -40,19 +43,19 @@
       }
     }
   }
-  &__openCart{
+  &__openCart {
     position: absolute;
     font-size: 2rem;
     width: 2rem;
     height: 2.4rem;
-    right:95px;
-    top:-1px;
+    right: 95px;
+    top: -1px;
     color: black;
     background-color: #fff;
     border-radius: 2rem;
     display: flex;
-    justify-content: center;  
-    align-items: center;      
+    justify-content: center;
+    align-items: center;
   }
 }
 
